syntax = "proto3";

package toWorkerTransfer;

import "reCtx/reCtx.proto";

option go_package = "netsvr/internal/protocol/toWorker/respTopicsConnCount;respTopicsConnCount";

//返回网关中的某几个主题的连接数
message RespTopicsConnCount {
  //请求上下文，网关会原样回传给工作进程
  reCtx.ReCtx reCtx = 1;
  //key是topic，value是该主题的连接数
  //如果topic没找到，则items中不会有该topic
  map<string, int32> items = 2;
}